Feature user story # 12 As Courier I should be able to see package details by API
