# swagger/v1/swagger.yaml
@@ -1,10 +1,11 @@
 ---
 openapi: 3.0.1
+basePath: "/api/v1"
 info:
   title: API V1
   version: v1
 paths:
-  "/api/v1/auth/sign_in/":
+  "/auth/sign_in/":
     post:
       summary: courier sign_in
       tags:
@@ -43,6 +44,82 @@ paths:
               required:
               - email
               - password
+  "/packages/{id}":
+    get:
+      summary: courier retrieves a package
+      tags:
+      - packages
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      - name: access-token
+        in: header
+        schema:
+          type: string
+      - name: token-type
+        in: header
+        schema:
+          type: string
+      - name: client
+        in: header
+        schema:
+          type: string
+      - name: expiry
+        in: header
+        schema:
+          type: string
+      - name: uid
+        in: header
+        schema:
+          type: string
+      - name: access-token
+        in: header
+        schema:
+          type: string
+      - name: token-type
+        in: header
+        schema:
+          type: string
+      - name: client
+        in: header
+        schema:
+          type: string
+      - name: expiry
+        in: header
+        schema:
+          type: string
+      - name: uid
+        in: header
+        schema:
+          type: string
+      responses:
+        '200':
+          description: package found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  tracking_number:
+                    type: string
+                  delivery_status:
+                    type: string
+                  estimated_delivery_date:
+                    type: string
+                    nullable: true
+                required:
+                - tracking_number
+                - delivery_status
+                - estimated_delivery_date
+        '401':
+          description: 'Error: unauthorized'
+          content: {}
+        '404':
+          description: 'Error: package not found'
+          content: {}
 servers:
 - url: http://localhost:3000
-- url: http://intense-shore-07962.herokuapp.com
+- url: https://intense-shore-07962.herokuapp.com/
